--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,10 @@
 }
 
 body {
+  width: 100%;
   min-width: 320px;
+  height: fit-content;
   min-height: 100vh;
+  display: flex;
+  justify-content: center;
 }
