style : 버튼 커서 포인터 기본 적용

--- a/src/index.css
+++ b/src/index.css
@@ -37,4 +37,12 @@ body {
   display: flex;
   justify-content: center;
   background-color: #f8f9fa;
+
+  button {
+    cursor: pointer;
+  }
+
+  button:disabled {
+    cursor: not-allowed;
+  }
 }
