--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@
   box-sizing: border-box;
   margin: 0px;
   padding: 0px;
+  font-size: 20px;
   line-height: 1.5;
   font-weight: 400;
   font-synthesis: none;
