--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+@import "tailwindcss";
+
+/* ============ tailwind 커스텀 테마 ============ */
+@theme {
+  --color-basic-blue: #0a82ae;
+  --color-basic-green: #03983a;
+  --color-basic-black: #272829;
+}
+
 .large-font-size {
   font-size: 24px;
 }
